test/classes/diten/paramFieldNonParamInit.good
paramFieldNonParamInit.chpl:6: error: default value for param is not a param
